--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~7.2.0",
     "@v.kiniv/kinect-js": "0.0.5",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "http-server": "^0.11.1",
+    "rxjs": "^6.3.3",
+    "symbol-observable": "^1.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
